k8s/frigate/resources/frigate.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    spec:
      containers:
        - name: frigate
          image: ghcr.io/blakeblackshear/frigate:0.14.1
          resources:
            requests:
              memory: 1G
            limits:
              memory: 4G
          ports:
            - name: web
              containerPort: 5000
            - name: rtsp
              containerPort: 8554
            - name: webrtc
              containerPort: 8555
            - name: webrtc-udp
              containerPort: 8555
              protocol: UDP
            - name: go2rtc
              containerPort: 1984
          volumeMounts:
            - name: config-volume
              mountPath: /config
            - name: config-map
              mountPath: /config/config.yml
              subPath: config.yml
              readOnly: true
            - mountPath: /dev/shm
              name: shm
            - name: truenas-media
              mountPath: /media/frigate
              subPath: frigate
      volumes:
        - name: config-map
          configMap:
            name: config
        - name: truenas-media
          persistentVolumeClaim:
            claimName: truenas-media
        - name: config-volume
          persistentVolumeClaim:
            claimName: config-volume
        - name: shm
          emptyDir:
            sizeLimit: 0.5Gi
            medium: Memory
---
apiVersion: v1
kind: Service
metadata:
  name: service
spec:
  ports:
    - name: webrtc-udp
      port: 8555
      protocol: UDP
      targetPort: webrtc-udp
    - name: webrtc
      port: 8555
      targetPort: webrtc
    - name: rtsp
      port: 8554
      targetPort: rtsp
    - name: web
      port: 80
      targetPort: web
    - name: go2rtc
      port: 1984
      targetPort: go2rtc
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    gethomepage.dev/href: 'https://frigate.durbin.casa'
    gethomepage.dev/enabled: 'true'
    gethomepage.dev/app: homepage
    gethomepage.dev/group: Home
    gethomepage.dev/icon: frigate
    gethomepage.dev/name: Frigate
    gethomepage.dev/widget.type: frigate
    gethomepage.dev/widget.url: http://frigate-service
    cert-manager.io/cluster-issuer: cloudflare-issuer
    nginx.ingress.kubernetes.io/auth-method: GET
    nginx.ingress.kubernetes.io/auth-url: http://authelia-service.default.svc.cluster.local/api/authz/auth-request
    nginx.ingress.kubernetes.io/auth-signin: https://auth.durbin.casa?rm=$request_method
    nginx.ingress.kubernetes.io/auth-response-headers: Remote-User,Remote-Name,Remote-Groups,Remote-Email
spec:
  ingressClassName: internal
  rules:
    - host: &host frigate.durbin.casa
      http:
        paths:
          - pathType: Prefix
            path: '/go2rtc'
            backend:
              service:
                name: service
                port:
                  name: go2rtc
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: service
                port:
                  name: web
  tls:
    - secretName: durbin-casa-wildcard-cert
      hosts:
        - *host
